[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/Main Menu.gd" type="Script" id=1]
[ext_resource path="res://Audio/UI Audio/switch36.ogg" type="AudioStream" id=2]
[ext_resource path="res://Backgrounds/Backgrounds/backgroundColorForest.png" type="Texture" id=3]

[node name="Main Menu" type="Control"]
modulate = Color( 0, 0.835294, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Click" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Sprite" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 0, -192 )
texture = ExtResource( 3 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 467.0
margin_top = 257.0
margin_right = 556.0
margin_bottom = 343.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 89.0
margin_bottom = 14.0
text = "Adventure"
align = 1

[node name="Start Game" type="Button" parent="CenterContainer/VBoxContainer"]
light_mask = 0
margin_top = 18.0
margin_right = 89.0
margin_bottom = 38.0
text = "Start Game"

[node name="Select Level" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 89.0
margin_bottom = 62.0
text = "Select Level"

[node name="Exit Game" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 89.0
margin_bottom = 86.0
text = "Exit Game"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Start Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Select Level" to="." method="_on_Select_Level_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit Game" to="." method="_on_Exit_Game_pressed"]
